@@ -11,7 +11,6 @@ import com.electronwill.nightconfig.core.file.CommentedFileConfig;
 import com.google.common.base.CaseFormat;
 import com.google.common.base.Converter;
 import dan200.computercraft.ComputerCraft;
-import dan200.computercraft.api.turtle.event.TurtleAction;
 import dan200.computercraft.core.apis.http.NetworkUtils;
 import dan200.computercraft.core.apis.http.options.Action;
 import dan200.computercraft.core.apis.http.options.AddressRuleConfig;
@@ -23,13 +22,12 @@ import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.config.ModConfig;
+import net.minecraftforge.fml.event.config.ModConfigEvent;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 @Mod.EventBusSubscriber( modid = ComputerCraft.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD )
 public final class Config
@@ -73,7 +71,6 @@ public final class Config
     private static final ConfigValue<Integer> advancedTurtleFuelLimit;
     private static final ConfigValue<Boolean> turtlesObeyBlockProtection;
     private static final ConfigValue<Boolean> turtlesCanPush;
-    private static final ConfigValue<List<? extends String>> turtleDisabledActions;
 
     private static final ConfigValue<Integer> computerTermWidth;
     private static final ConfigValue<Integer> computerTermHeight;
@@ -273,10 +270,6 @@ public final class Config
                 .comment( "If set to true, Turtles will push entities out of the way instead of stopping if there is space to do so" )
                 .define( "can_push", ComputerCraft.turtlesCanPush );
 
-            turtleDisabledActions = builder
-                .comment( "A list of turtle actions which are disabled." )
-                .defineList( "disabled_actions", Collections.emptyList(), x -> x instanceof String && getAction( (String) x ) != null );
-
             builder.pop();
         }
 
@@ -342,12 +335,13 @@ public final class Config
         // HTTP
         ComputerCraft.httpEnabled = httpEnabled.get();
         ComputerCraft.httpWebsocketEnabled = httpWebsocketEnabled.get();
-        ComputerCraft.httpRules = Collections.unmodifiableList( httpRules.get().stream()
-            .map( AddressRuleConfig::parseRule ).filter( Objects::nonNull ).collect( Collectors.toList() ) );
+        ComputerCraft.httpRules = httpRules.get().stream()
+            .map( AddressRuleConfig::parseRule ).filter( Objects::nonNull ).toList();
 
         ComputerCraft.httpMaxRequests = httpMaxRequests.get();
         ComputerCraft.httpMaxWebsockets = httpMaxWebsockets.get();
         ComputerCraft.httpDownloadBandwidth = httpDownloadBandwidth.get();
+        ComputerCraft.httpUploadBandwidth = httpUploadBandwidth.get();
         NetworkUtils.reloadConfig();
 
         // Peripheral
@@ -366,9 +360,6 @@ public final class Config
         ComputerCraft.turtlesObeyBlockProtection = turtlesObeyBlockProtection.get();
         ComputerCraft.turtlesCanPush = turtlesCanPush.get();
 
-        ComputerCraft.turtleDisabledActions.clear();
-        for( String value : turtleDisabledActions.get() ) ComputerCraft.turtleDisabledActions.add( getAction( value ) );
-
         // Terminal size
         ComputerCraft.computerTermWidth = computerTermWidth.get();
         ComputerCraft.computerTermHeight = computerTermHeight.get();
@@ -379,36 +370,24 @@ public final class Config
 
         // Client
         ComputerCraft.monitorRenderer = monitorRenderer.get();
-        ComputerCraft.monitorDistanceSq = monitorDistance.get() * monitorDistance.get();
+        ComputerCraft.monitorDistance = monitorDistance.get();
     }
 
     @SubscribeEvent
-    public static void sync( ModConfig.Loading event )
+    public static void sync( ModConfigEvent.Loading event )
     {
         sync();
     }
 
     @SubscribeEvent
-    public static void sync( ModConfig.Reloading event )
+    public static void sync( ModConfigEvent.Reloading event )
     {
         // Ensure file configs are reloaded. Forge should probably do this, so worth checking in the future.
         CommentedConfig config = event.getConfig().getConfigData();
-        if( config instanceof CommentedFileConfig ) ((CommentedFileConfig) config).load();
+        if( config instanceof CommentedFileConfig loadable ) loadable.load();
 
         sync();
     }
 
     private static final Converter<String, String> converter = CaseFormat.LOWER_CAMEL.converterTo( CaseFormat.UPPER_UNDERSCORE );
-
-    private static TurtleAction getAction( String value )
-    {
-        try
-        {
-            return TurtleAction.valueOf( converter.convert( value ) );
-        }
-        catch( IllegalArgumentException e )
-        {
-            return null;
-        }
-    }
 }
